Fix mobile layout - remove margin on small screens

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -6,7 +6,7 @@
   @include container;
   @include clearfix;
   margin-top: 2em;
-  margin-left: 96px;
+  margin-left: 0;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
@@ -17,7 +17,7 @@
   }
   
   @media screen and (min-width: $sidebar-screen-min-width) {
-  //  margin-left: calc(#{$sidebar-link-max-width} + 1rem);
+    margin-left: 96px;
   }
 }
 
